config/do/zipkin-do-k8s-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: zipkin
  namespace: do-myproject
  labels:
    run: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      run: zipkin
  template:
    metadata:
      labels:
        run: zipkin
    spec:
      containers:
      - name: zipkin
        image: balchu/zipkin:2.4.5
        ports:
        - containerPort: 9411
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512M
            cpu: 1000m
          requests:
            memory: 512M
            cpu: 500m
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
